--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_clock">
+    package="com.moulibheemaneti.my_clock">
    <application
         android:label="My Clock"
         android:name="${applicationName}"
