--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = my_clock
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.myClock
+PRODUCT_BUNDLE_IDENTIFIER = com.moulibheemaneti.myClock
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.moulibheemaneti. All rights reserved.
